--- a/app/src/main/res/layout/agenda_item_event.xml
+++ b/app/src/main/res/layout/agenda_item_event.xml
@@ -17,9 +17,9 @@
         android:layout_width="30dp"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:src="@drawable/ic_notifications_grey600_18dp"
+        android:src="@drawable/ic_more_vert_grey600_36dp"
         android:paddingLeft="0dp"
-        android:paddingRight="16dp"
+        android:paddingRight="12dp"
         android:id="@+id/agenda_item_event_icon"/>
     <TextView
         android:layout_width="0dp"
@@ -34,11 +34,12 @@
         android:paddingLeft="6dp"
         android:paddingBottom="30dp"
         android:layout_weight="1.0" />
-    <ImageButton
+    <ImageView
         android:layout_width="50dp"
         android:layout_height="match_parent"
+        android:paddingRight="20dp"
+        android:paddingLeft="10dp"
         android:gravity="center"
         android:id="@+id/agenda_item_event_reminder"
-        android:src="@drawable/reminder_button_sel"
-        style="?android:attr/borderlessButtonStyle"/>
+        android:src="@drawable/ic_notifications_grey600_24dp"/>
 </LinearLayout>
