--- a/app/src/main/res/layout/activity_addevent.xml
+++ b/app/src/main/res/layout/activity_addevent.xml
@@ -78,8 +78,8 @@
         <ImageButton
             android:layout_width="55dp"
             android:layout_height="70dp"
-            android:src="@drawable/ic_insert_invitation_black_24dp"
-            style="?android:attr/borderlessButtonStyle"
+            android:src="@drawable/ic_mic_black_24dp"
+            style="@android:style/Widget.DeviceDefault.Button.Borderless"
             android:id="@+id/add_event_voice"
             android:layout_toRightOf="@+id/add_event_dow_month"
 
@@ -89,8 +89,8 @@
         <ImageButton
             android:layout_width="55dp"
             android:layout_height="70dp"
-            android:src="@drawable/ic_insert_invitation_black_24dp"
-            style="?android:attr/borderlessButtonStyle"
+            android:src="@drawable/ic_clear_black_24dp"
+            style="@android:style/Widget.DeviceDefault.Button.Borderless"
             android:id="@+id/add_event_cancel"
             android:layout_toLeftOf="@+id/add_event_done"
 
@@ -100,10 +100,10 @@
         <ImageButton
             android:layout_width="65dp"
             android:layout_height="70dp"
-            android:src="@drawable/ic_add_black_24dp"
+            android:src="@drawable/ic_done_black_24dp"
             android:id="@+id/add_event_done"
             android:paddingRight="20dp"
-            style="?android:attr/borderlessButtonStyle"
+            style="@android:style/Widget.DeviceDefault.Button.Borderless"
             android:layout_alignParentRight="true"
 
             android:clickable="true"
@@ -144,9 +144,9 @@
                 android:layout_width="40dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:src="@drawable/ic_notifications_grey600_18dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="16dp"
+                android:src="@drawable/ic_more_vert_grey600_36dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="10dp"
                 android:id="@+id/add_event_icon"/>
             <TextView
                 android:layout_width="0dp"
@@ -168,7 +168,7 @@
                 android:gravity="center"
                 android:id="@+id/add_event_reminder"
                 android:src="@drawable/reminder_button_sel"
-                style="?android:attr/borderlessButtonStyle"
+                style="@android:style/Widget.DeviceDefault.Button.Borderless"
 
                 android:clickable="true"
                 android:onClick="didClickEventReminder"/>
