--- a/app/src/main/res/layout/activity_addevent.xml
+++ b/app/src/main/res/layout/activity_addevent.xml
@@ -13,10 +13,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_margin="0dp"
         android:paddingTop="10dp"
         android:id="@+id/todayView"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp">
 
         <TextView
             android:layout_width="70dp"
@@ -112,9 +114,10 @@
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="horizontal" android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
+            android:paddingBottom="5dp"
             android:layout_below="@id/add_event_day"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:id="@+id/layout_top">
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
@@ -151,7 +154,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:text="All-Nighter"
+                android:text="Event Name"
                 android:gravity="center_vertical|left"
                 android:textColor="#4F4F4F"
                 android:textSize="15dp"
@@ -174,5 +177,58 @@
                 android:onClick="didClickEventReminder"/>
         </LinearLayout>
 
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="horizontal" android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="5dp"
+            android:layout_below="@id/layout_top"
+            android:weightSum="1"
+            android:id="@+id/layout_middle">
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:text="Description"
+                android:gravity="center_vertical|left"
+                android:textColor="#4F4F4F"
+                android:textSize="15dp"
+                android:fontFamily="sans-serif-light"
+                android:id="@+id/add_event_description"
+                android:paddingLeft="20dp"
+                android:layout_weight="1.0"
+
+                android:clickable="true"
+                android:onClick="didClickEventDescription"/>
+        </LinearLayout>
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="horizontal" android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:layout_below="@id/layout_middle"
+            android:weightSum="1">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:text="Location"
+                android:gravity="center_vertical|left"
+                android:textColor="#4F4F4F"
+                android:textSize="15dp"
+                android:fontFamily="sans-serif-light"
+                android:id="@+id/add_event_location"
+                android:paddingLeft="20dp"
+                android:layout_weight="1.0"
+
+                android:clickable="true"
+                android:onClick="didClickEventLocation"/>
+        </LinearLayout>
+
+
+
+
+
     </RelativeLayout>
+
+
+
+
 </RelativeLayout>
