--- a/app/src/main/res/layout/activity_voicememo.xml
+++ b/app/src/main/res/layout/activity_voicememo.xml
@@ -2,80 +2,82 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    tools:context=".VoiceMemo"
+    android:background="@android:color/transparent">
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="150dp"
+
+    <RelativeLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="32dp"
-        android:text="Recording"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-<!--
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_below="@+id/textView1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp"
-        android:scaleType="fitXY"
-        android:src="@android:drawable/presence_audio_online" />
--->
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="50dp"
-        android:onClick="start"
-        android:text="Start" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:paddingTop="10dp"
+        android:id="@+id/todayView"
+        android:background="@android:color/white"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="250dp">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/button1"
-        android:layout_marginTop="50dp"
-        android:onClick="stop"
-        android:text="Stop" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="horizontal" android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="5dp"
+            android:weightSum="1"
+            android:id="@+id/layout_voice_top">
+            <ImageButton
+                android:id="@+id/button1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_mic_black_24dp"
+                style="@android:style/Widget.DeviceDefault.Button.Borderless"
 
-    <Button
-    android:id="@+id/button3"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignLeft="@id/textView1"
-    android:layout_below="@+id/button2"
-    android:layout_marginTop="50dp"
-    android:onClick="play"
-    android:text="Play" />
+                android:clickable="true"
+                android:onClick="start"/>
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@id/textView1"
-        android:layout_below="@+id/button2"
-        android:layout_marginTop="50dp"
-        android:onClick="erase"
-        android:text="Erase" />
+            <ImageButton
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_stop_black_24dp"
+                style="@android:style/Widget.DeviceDefault.Button.Borderless"
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/button3"
-        android:layout_marginTop="50dp"
-        android:onClick="save"
-        android:text="Save" />
+                android:clickable="true"
+                android:onClick="stop"/>
+
+            <ImageButton
+                android:id="@+id/button3"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_play_arrow_black_24dp"
+                style="@android:style/Widget.DeviceDefault.Button.Borderless"
+
+                android:clickable="true"
+                android:onClick="play"/>
+
+            <ImageButton
+                android:id="@+id/button4"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_delete_black_24dp"
+                style="@android:style/Widget.DeviceDefault.Button.Borderless"
+
+                android:clickable="true"
+                android:onClick="erase"/>
+
+            <ImageButton
+                android:id="@+id/button5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_save_black_24dp"
+                style="@android:style/Widget.DeviceDefault.Button.Borderless"
+                android:layout_weight="1"
+
+                android:clickable="true"
+                android:onClick="save"/>
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </RelativeLayout>
