--- a/app/src/main/res/layout/activity_voicememo.xml
+++ b/app/src/main/res/layout/activity_voicememo.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".VoiceMemo"
-    android:background="@android:color/transparent">
+    android:background="@android:color/transparent"
+    android:onClick="cancel">
 
 
     <RelativeLayout
