--- a/app/src/main/res/layout/activity_agenda.xml
+++ b/app/src/main/res/layout/activity_agenda.xml
@@ -91,259 +91,17 @@
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/weekViewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/todayView"
-        android:id="@+id/weekView"
-        android:paddingTop="10dp">
-        <TableLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:weightSum="1"
-            android:id="@+id/dayOfWeekView">
-            <TableRow
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp">
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="S"
-                    android:textSize="12dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#CCCCCC"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="M"
-                    android:textSize="12dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#868686"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="T"
-                    android:textSize="12dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#868686"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="W"
-                    android:textSize="12dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#868686"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="T"
-                    android:textSize="12dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#868686"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="F"
-                    android:textSize="12dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#868686"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="S"
-                    android:textSize="12dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#CCCCCC"/>
-            </TableRow>
-            <TableRow
-                android:paddingTop="20dp"
-                android:paddingBottom="0dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp">
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="1"
-                    android:textSize="24dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#4F4F4F"
-                    android:id="@+id/weekViewDay1"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="2"
-                    android:textSize="24dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#4F4F4F"
-                    android:id="@+id/weekViewDay2"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="3"
-                    android:textSize="24dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#4F4F4F"
-                    android:id="@+id/weekViewDay3"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="4"
-                    android:textSize="24dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#4F4F4F"
-                    android:id="@+id/weekViewDay4"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="5"
-                    android:textSize="24dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#4F4F4F"
-                    android:id="@+id/weekViewDay5"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="6"
-                    android:textSize="24dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#4F4F4F"
-                    android:id="@+id/weekViewDay6"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="7"
-                    android:textSize="24dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#4F4F4F"
-                    android:id="@+id/weekViewDay7"/>
-            </TableRow>
-            <TableRow
-                android:layout_height="wrap_content"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp">
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="·"
-                    android:textSize="50dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#CCCCCC"
-                    android:id="@+id/weekViewBusy1"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="·"
-                    android:textSize="50dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#CCCCCC"
-                    android:id="@+id/weekViewBusy2"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="·"
-                    android:textSize="50dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#CCCCCC"
-                    android:id="@+id/weekViewBusy3"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="·"
-                    android:textSize="50dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#CCCCCC"
-                    android:id="@+id/weekViewBusy4"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="·"
-                    android:textSize="50dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#CCCCCC"
-                    android:id="@+id/weekViewBusy5"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="·"
-                    android:textSize="50dp"
-                    android:typeface="sans"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center"
-                    android:textColor="#CCCCCC"
-                    android:id="@+id/weekViewBusy6"/>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="·"
-                    android:textSize="50dp"
-                    android:fontFamily="sans-serif-light"
-                    android:typeface="sans"
-                    android:gravity="center"
-                    android:textColor="#CCCCCC"
-                    android:id="@+id/weekViewBusy7"/>
-            </TableRow>
-            <TableRow>
-                <View
-                    android:layout_width="0px"
-                    android:layout_weight="1"
-                    android:layout_height="1px"
-                    android:background="#EBEBEB" />
-            </TableRow>
-        </TableLayout>
-    </LinearLayout>
+        android:layout_height="146dp"
+        android:layout_below="@id/todayView"/>
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_below="@+id/weekView"
+        android:layout_below="@+id/weekViewPager"
         android:divider="#ECECEC"
         android:dividerHeight="1dp"
         android:id="@+id/agendaListView">
